fix(join-room): fix alignment

--- a/frontend/src/app/components/join-room/JoinRoom.scss
+++ b/frontend/src/app/components/join-room/JoinRoom.scss
@@ -9,6 +9,10 @@
         margin: 0;
     }
 
+    .Input input {
+        margin-top: 0;
+    }
+
     section {
         padding: 0;
         height: 100%;
